--- a/mealkit-frontend/package.json
+++ b/mealkit-frontend/package.json
@@ -10,13 +10,17 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "chart.js": "^4.4.0",
     "next": "13.4.9",
     "postcss": "8.4.25",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
-    "@types/react": "18.2.23"
+    "@types/node": "20.8.2",
+    "@types/react": "18.2.23",
+    "typescript": "5.2.2"
   }
 }
